Wed Apr 15 01:11:08 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: Fix setting setting of prefix map for P - in 1.3.2,
	  this would failed to also search in the subject.  Now it also
	  searches in the subject and topic.

Wed Apr 15 01:09:29 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: When listing matching terms, don't make the commas
	  italic.

Wed Mar 11 12:18:31 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: Note that one should ensure that Omega gets sent
	  form submissions encoded in UTF-8.

Wed Mar 11 11:28:31 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: Discuss encodings of filenames (see #550).

Wed Mar 11 11:07:29 GMT 2015  Olly Betts <olly@survex.com>

	* urldecode.h,urlenctest.cc: $prettyurl now decodes valid UTF-8
	  sequences.  Fixes #550 and #644, reported by catkin and terencz.

Mon Mar 09 12:31:44 GMT 2015  Olly Betts <olly@survex.com>

	* docs/: Add a document about character encoding, as suggested by
	  James Aylett in #550.

Mon Mar 09 11:32:32 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst: Document 'E' prefixed boolean terms for filtering
	  by extension (see #668, reported by bramvdh).

Mon Mar 09 11:29:15 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst: Whitespace cleanup.

Mon Mar 09 10:16:05 GMT 2015  Olly Betts <olly@survex.com>

	* templates/xml: Add XML declaration.

Mon Mar 09 10:14:51 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: Eliminate blank line before <html>.

Mon Mar 09 10:14:03 GMT 2015  Olly Betts <olly@survex.com>

	* templates/godmode: Return charset utf-8 in the content-type.

Mon Mar 09 06:58:13 GMT 2015  Olly Betts <olly@survex.com>

	* urldecode.h,urlenctest.cc: Improve decoding done by $prettyurl - we
	  now leave the query and fragment parts of the URL alone and don't
	  decode an escaped "/" (omindex doesn't create URLs with any of
	  these, so we only risk breaking other URLs which have them), and we