@@ -32,10 +32,15 @@ DEFAULTOP
 	If you want to implement "match any words", set ``DEFAULTOP=or``.
 
 P
-	probabilistic query (may occur multiple times).
+	probabilistic query (may occur multiple times - if so, each will be
+	parsed and the results combined with ``OP_AND``).
+
+P.\ *PREFIX*
+	like ``P``, but parsed with the default prefix set to *PREFIX*.  For
+	example, ``P.A`` will search the author by default.
 
 xP
-	terms from previous probabilistic query - used to decide if
+	terms from the previous probabilistic query - used to decide if
 	this is a fresh query (in which case relevance judgements are
 	discarded and the first page of matches is shown), an extended query
 	(in which case the first page of matches is shown), or an unchanged
@@ -47,7 +52,10 @@ ADD
 	supported or is disabled).
 
 X
-	topterms to add to query.
+	topterms to add to query (each term in a separate ``X`` parameter).  If
+	``ADD`` is set, these will be appended to the value of the first
+	non-empty ``P`` parameter, or used to build a query if there are no
+	non-empty ``P`` parameters.
 
 R
 	relevant document(s) (multiple values separated by ".")
